// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HotTip calls context on hover & blur 1`] = `
<span
  aria-describedby="ht-anchor"
  onBlur={[Function]}
  onFocus={[Function]}
  onMouseOut={[Function]}
  onMouseOver={[Function]}
  tabIndex={0}
>
  text
</span>
`;

exports[`HotTip calls context on hover & blur 2`] = `
<span
  aria-describedby="ht-anchor"
  onBlur={[Function]}
  onFocus={[Function]}
  onMouseOut={[Function]}
  onMouseOver={[Function]}
  tabIndex={0}
>
  text
</span>
`;

exports[`HotTip calls render props 1`] = `
<h2
  aria-describedby="ht-anchor"
  onBlur={[Function]}
  onFocus={[Function]}
  onMouseOut={[Function]}
  onMouseOver={[Function]}
  tabIndex={0}
>
  'hi'
</h2>
`;

exports[`HotTip renders 1`] = `
<a
  aria-describedby="ht-anchor"
  onBlur={[Function]}
  onFocus={[Function]}
  onMouseOut={[Function]}
  onMouseOver={[Function]}
  tabIndex={0}
>
  link
</a>
`;

exports[`HotTip renders without tip 1`] = `"text"`;
